// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateContracts > Section 1: Schema types from components/schemas > adds JSDoc from description field 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** A product in the catalog */
export type Product = {
  name?: string;
};"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates array type alias 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Tag = string;

export type TagList = Tag[];"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates interface for object schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  name: string;
  price: number;
};"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates intersection type for allOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Base = {
  id: string;
};

export type Extended = Base & {
  name: string;
};"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates nullable type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type MaybeString = string | null;"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates type alias for numeric enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Priority = 1 | 2 | 3;"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates type alias for primitive schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Status = string;"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates type alias for string enum (literal union, NOT enum keyword) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Color = 'red' | 'green' | 'blue';"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates union type for anyOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Cat = {
  meow?: boolean;
};

export type Dog = {
  bark?: boolean;
};

export type Pet = Cat | Dog;"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > generates union type for oneOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Success = {
  data?: string;
};

export type Error = {
  message?: string;
};

export type Result = Success | Error;"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > produces no JSDoc when description is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Plain = {
  value?: string;
};"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > produces no schema types when components.schemas is empty 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 1: Schema types from components/schemas > sorts types topologically so referenced types appear first 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  name: string;
  price: number;
};

export type OrderItem = {
  product: Product;
  quantity: number;
};"
`;

exports[`generateContracts > Section 1b: Security scheme types > does not generate SecuritySchemes union for a single scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ApiKeyAuth = { type: "apiKey"; name: "X-API-Key"; in: "header" };"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates no security types when securitySchemes is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates no security types when securitySchemes is empty 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates type for apiKey security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ApiKeyAuth = { type: "apiKey"; name: "X-API-Key"; in: "header" };"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates type for http/bearer security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BearerAuth = { type: "http"; scheme: "bearer"; bearerFormat: "JWT" };"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates type for oauth2 security scheme with flows 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Oauth2Auth = { type: "oauth2"; flows: { authorizationCode: { authorizationUrl: "https://example.com/oauth/authorize"; tokenUrl: "https://example.com/oauth/token"; scopes: { "read:pets": "Read pets"; "write:pets": "Write pets" } } } };"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates type for openIdConnect security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OidcAuth = { type: "openIdConnect"; openIdConnectUrl: "https://example.com/.well-known/openid-configuration" };"
`;

exports[`generateContracts > Section 1b: Security scheme types > generates union type for multiple security schemes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ApiKeyAuth = { type: "apiKey"; name: "X-API-Key"; in: "header" };

export type BearerAuth = { type: "http"; scheme: "bearer" };

export type SecuritySchemes = ApiKeyAuth | BearerAuth;"
`;

exports[`generateContracts > Section 1b: Security scheme types > includes JSDoc description from security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** API key for authentication */

export type ApiKeyAuth = { type: "apiKey"; description: "API key for authentication"; name: "X-API-Key"; in: "header" };"
`;

exports[`generateContracts > Section 1c: Server variable types > generates ServerParams with enum union type and JSDoc default 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{environment}.api.example.com/{version} */
export interface ServerParams {
  /** @default production */
  environment: "production" | "staging" | "development";
  /** @default v1 */
  version: string;
}"
`;

exports[`generateContracts > Section 1c: Server variable types > generates no server types when servers is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 1c: Server variable types > generates numbered types for multiple servers with variables 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{env}.api.example.com */
export interface Server1Params {
  /** @default prod */
  env: string;
}

/** Server: https://{region}.cdn.example.com */
export interface Server2Params {
  /** @default us */
  region: string;
}"
`;

exports[`generateContracts > Section 1c: Server variable types > generates string type for variables without enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{region}.example.com */
export interface ServerParams {
  /** Deployment region @default us-east-1 */
  region: string;
}"
`;

exports[`generateContracts > Section 1c: Server variable types > includes server URL in JSDoc on interface 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{environment}.api.example.com/{version} */
export interface ServerParams {
  /** @default production */
  environment: string;
  /** @default v1 */
  version: string;
}"
`;

exports[`generateContracts > Section 1c: Server variable types > skips servers without variables 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 2: Parameter types per operation > does not generate query type for operations without query params 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetUsersResponse = void;"
`;

exports[`generateContracts > Section 2: Parameter types per operation > generates query parameter type with optional fields 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetApiV1ProductsQuery = { page?: number; limit?: number; };

export type GetApiV1ProductsResponse = void;"
`;

exports[`generateContracts > Section 2: Parameter types per operation > marks required query params without ? 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetSearchQuery = { q: string; };

export type GetSearchResponse = void;"
`;

exports[`generateContracts > Section 2b: Header parameter types per operation > does not generate Headers type for operations without header params 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetUsersQuery = { page?: number; };

export type GetUsersResponse = void;"
`;

exports[`generateContracts > Section 2b: Header parameter types per operation > generates header type with required + optional fields 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetApiV1DataHeaders = { "X-Request-ID": string; Authorization?: string; };

export type GetApiV1DataResponse = void;"
`;

exports[`generateContracts > Section 2b: Header parameter types per operation > leaves simple header names unquoted 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetApiV1DataHeaders = { Authorization: string; };

export type GetApiV1DataResponse = void;"
`;

exports[`generateContracts > Section 2b: Header parameter types per operation > maps typed headers (integer, enum) to correct TS types 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetApiV1ItemsHeaders = { "X-Retry-Count"?: number; "X-Version"?: 'v1' | 'v2'; };

export type GetApiV1ItemsResponse = void;"
`;

exports[`generateContracts > Section 2b: Header parameter types per operation > quotes header names with special characters 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetApiV1DataHeaders = { "X-Custom-Header": string; "X-Special.Chars"?: string; };

export type GetApiV1DataResponse = void;"
`;

exports[`generateContracts > Section 3: Request body types per operation > does not generate body type for operations without request body 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetUsersResponse = void;"
`;

exports[`generateContracts > Section 3: Request body types per operation > generates request body type from $ref 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type CreateProduct = {
  name: string;
};

export type PostProductsBody = CreateProduct;

export type PostProductsResponse = void;"
`;

exports[`generateContracts > Section 3: Request body types per operation > generates request body type from inline schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostApiV1ProductsBody = {
  name: string;
  price: number;
};

export type PostApiV1ProductsResponse = void;"
`;

exports[`generateContracts > Section 4: Response types per operation > does not generate DefaultApiError when no operation has default response 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;

export type GetItemsError400 = unknown;

export type GetItemsErrors = ApiError<400, GetItemsError400>;"
`;

exports[`generateContracts > Section 4: Response types per operation > generates DefaultError type and DefaultApiError class for 'default' response 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;

export type GetItemsDefaultError = unknown;"
`;

exports[`generateContracts > Section 4: Response types per operation > generates error types per status code 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  name?: string;
};

export type BadRequestError = {
  message?: string;
};

export type NotFoundError = {
  message?: string;
};

export type GetApiV1ProductsProductIdResponse = Product;

export type GetApiV1ProductsProductIdError400 = BadRequestError;

export type GetApiV1ProductsProductIdError404 = NotFoundError;

export type GetApiV1ProductsProductIdErrors = ApiError<400, GetApiV1ProductsProductIdError400> | ApiError<404, GetApiV1ProductsProductIdError404>;"
`;

exports[`generateContracts > Section 4: Response types per operation > generates error union type combining all error statuses 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;

export type GetItemsError400 = unknown;

export type GetItemsError404 = unknown;

export type GetItemsErrors = ApiError<400, GetItemsError400> | ApiError<404, GetItemsError404>;"
`;

exports[`generateContracts > Section 4: Response types per operation > generates success response type from schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  name?: string;
};

export type GetApiV1ProductsResponse = Product[];"
`;

exports[`generateContracts > Section 4: Response types per operation > generates typed DefaultError for default response with schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ErrorBody = {
  message?: string;
};

export type GetItemsResponse = void;

export type GetItemsDefaultError = ErrorBody;"
`;

exports[`generateContracts > Section 4: Response types per operation > handles colon in path for type name generation 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  name?: string;
};

export type GetApiV1AsyncOperationsOperationIdRecallResponse = Product;"
`;

exports[`generateContracts > Section 4: Response types per operation > uses unknown for error types without schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;

export type GetItemsError500 = unknown;

export type GetItemsErrors = ApiError<500, GetItemsError500>;"
`;

exports[`generateContracts > Section 5: ApiError class > ApiError has correct constructor signature 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 5: ApiError class > ApiError sets this.name to 'ApiError' 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > Section 5: ApiError class > always includes ApiError class even for empty doc 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > binary stream response types > always emits StreamResponse class 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = string[];"
`;

exports[`generateContracts > binary stream response types > generates StreamResponse for application/octet-stream response 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetFilesIdResponse = StreamResponse;"
`;

exports[`generateContracts > binary stream response types > generates StreamResponse for image/* response 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetImagesIdResponse = StreamResponse;"
`;

exports[`generateContracts > binary stream response types > generates string for JSON response (non-binary) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetDataResponse = string;"
`;

exports[`generateContracts > empty document > generates header and error handling constructs 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > error handling constructs > includes ErrorResponse class 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > error handling constructs > includes RequesterFailError class 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > full integration > generates complete contracts with all sections 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** A product */
export type Product = {
  id: string;
  name: string;
  price: number;
};

export type CreateProductInput = {
  name: string;
  price: number;
};

export type ErrorBody = {
  code: number;
  message: string;
};

export type ProductStatus = 'available' | 'discontinued';

export type GetApiV1ProductsQuery = { page?: number; limit?: number; };

export type GetApiV1ProductsResponse = Product[];

export type GetApiV1ProductsError400 = ErrorBody;

export type GetApiV1ProductsErrors = ApiError<400, GetApiV1ProductsError400>;

export type PostApiV1ProductsBody = CreateProductInput;

export type PostApiV1ProductsResponse = Product;

export type PostApiV1ProductsError400 = ErrorBody;

export type PostApiV1ProductsErrors = ApiError<400, PostApiV1ProductsError400>;"
`;

exports[`generateContracts > full integration > handles operations with path parameters in type names 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetUsersUserIdPostsPostIdResponse = void;"
`;

exports[`generateContracts > header > includes auto-generated header comment 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';"
`;

exports[`generateContracts > reserved name collision handling > does not rename schemas without collisions 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  name?: string;
};"
`;

exports[`generateContracts > reserved name collision handling > handles multiple reserved name collisions in one spec 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ErrorResponseModel = {
  message?: string;
};

export type StreamResponseModel = string;

export type ApiErrorModel = string;

export type Product = {
  name?: string;
};"
`;

exports[`generateContracts > reserved name collision handling > renames $ref references in allOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ErrorResponseModel = {
  code?: number;
};

export type DetailedError = ErrorResponseModel & {
  detail?: string;
};"
`;

exports[`generateContracts > reserved name collision handling > renames $ref references to collided schemas in response types 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ErrorResponseModel = {
  message?: string;
};

export type GetItemsResponse = void;

export type GetItemsError400 = ErrorResponseModel;

export type GetItemsErrors = ApiError<400, GetItemsError400>;"
`;

exports[`generateContracts > reserved name collision handling > renames user schema that collides with ApiError 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ApiErrorModel = {
  detail?: string;
};"
`;

exports[`generateContracts > reserved name collision handling > renames user schema that collides with ErrorResponse 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ErrorResponseModel = {
  code: number;
  message: string;
};"
`;

exports[`generateContracts > reserved name collision handling > renames user schema that collides with StreamResponse 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type StreamResponseModel = string;"
`;
